--- a/mkdir.yml
+++ b/mkdir.yml
@@ -13,4 +13,4 @@
         mode: 0775
       register: file
         - debug:
-            msg: "{ file: {file.dest.out}}"
+            var: file      
