--- a/playbook/motd-facts.yml
+++ b/playbook/motd-facts.yml
@@ -3,9 +3,8 @@
   hosts: localhost
   tasks:
     - template:
-        src: motd-facts.j2
-        dest: "/var/run/motd.dynamic"
-        state: present
+        src: "../templates/motd-facts.j2"
+        dest: "/etc/motd"
         owner: root
         group: root
         mode: 0644
